# kmws

./: .env  .gitignore  requirements-dev.txt
.github/workflows/: ci-kmws-accounting.yml  ci-kmws-ui.yml  cicd-kmws-ui.yml
kmws-accounting/: Dockerfile  pyproject.toml  setup.cfg  setup.py
kmws-accounting/kmws_accounting/: __init__.py  __main__.py  main.py
kmws-accounting/kmws_accounting/adapters/: asgi.py  awslambda.py  dynamodb.py  env.py  graphql.py  schema.graphql
kmws-accounting/kmws_accounting/application/: model.py  ports.py  use_cases.py
kmws-accounting/scripts/: cognito.py
kmws-accounting/tests/adapters/: test_dynamodb.py  test_env.py
kmws-accounting/tests/application/: test_model.py  test_use_cases.py
kmws-accounting2/: package-lock.json  package.json
kmws-accounting2/adapters/: dynamodb.js
kmws-console/: package-lock.json  package.json
kmws-ui/: .dockerignore  Dockerfile  app.js  next.config.js  package-lock.json  package.json
kmws-ui/adapters/: auth.js  graphql.js
kmws-ui/pages/: _app.js  index.js  index.tsx
kmws-ui/pages/accounting/: [...yearMonth].js
kmws-ui/styles/: Accounting.module.css  Home.module.css
