[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kmws-accounting"
version = "0.0"
dependencies = ["ariadne~=0.16", "uvicorn~=0.18", "boto3~=1.24", "PyJWT~=2.5"]

[tool.setuptools.package-data]
kmws_accounting = ["py.typed"]
"kmws_accounting.adapters" = ["schema.graphql"]

[tool.setuptools.packages.find]
include = ["kmws_accounting*"]
